src/main/java/application/testData/invalidRandomAddresses/hard/completedCorrectly/RandomAddressesWithThreeWrongRandomFields.java
package application.testData.invalidRandomAddresses.hard.completedCorrectly;

public class RandomAddressesWithThreeWrongRandomFields {
}
